--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,10 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="PNRPU_primary">#426c97</color>
-    <color name="PNRPU_background">#FFFFFFFF</color>
+    <color name="PNRPU_background">#F6F6F6</color>
     <color name="PNRPU_secondary">#E16163</color>
+    <color name="light_blue_400">#FF29B6F6</color>
+    <color name="light_blue_600">#FF039BE5</color>
+    <color name="gray_400">#FFBDBDBD</color>
+    <color name="gray_600">#FF757575</color>
 </resources>
