--- a/app/src/main/res/layout/fragment_professor.xml
+++ b/app/src/main/res/layout/fragment_professor.xml
@@ -4,13 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context=".ProfessorFragment">
+    tools:context=".fragments.ProfessorFragment">
     <!--android:background="@color/material_on_background_emphasis_medium"-->
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="ProfessorFragment" />
+        android:text="@string/professor_fragment_placeholder_text" />
 
 </FrameLayout>
