--- a/app/src/main/res/layout/sample_lesson_view.xml
+++ b/app/src/main/res/layout/sample_lesson_view.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <com.leenz.pnrpu.LessonView
+    <com.leenz.pnrpu.views.LessonView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/lessons_layout_bg"
@@ -59,6 +59,6 @@
                 app:layout_constraintBottom_toTopOf="@id/locationTV"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/subjectNameTV" />
-    </com.leenz.pnrpu.LessonView>
+    </com.leenz.pnrpu.views.LessonView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
