--- a/app/src/main/res/drawable/lessons_layout_bg.xml
+++ b/app/src/main/res/drawable/lessons_layout_bg.xml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#80FEEBEF"/>
-<!--    <stroke android:color="@color/PNRPU_secondary" android:width="1dp" />-->
-    <corners android:radius="12dp" />
-    <padding android:left="16dp" android:top="12dp" android:bottom="12dp" android:right="16dp"/>
-</shape>
+<selector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:constantSize="true"
+    android:enterFadeDuration="@integer/material_motion_duration_short_1"
+    android:exitFadeDuration="@integer/material_motion_duration_short_1">
+    <item android:state_activated="true" android:drawable="@color/selected_lesson_background"/>
+    <item android:drawable="@color/lesson_background"/>
+<!--    <shape xmlns:android="http://schemas.android.com/apk/res/android">-->
+
+<!--        &lt;!&ndash;        <solid android:color="#80FEEBEF"/>&ndash;&gt;-->
+<!--        &lt;!&ndash;    <stroke android:color="@color/PNRPU_secondary" android:width="1dp" />&ndash;&gt;-->
+<!--        <corners android:radius="12dp" />-->
+<!--        <padding android:left="16dp" android:top="12dp" android:bottom="12dp" android:right="16dp"/>-->
+<!--    </shape>-->
+</selector>
