--- a/app/src/main/res/layout/fragment_timetable.xml
+++ b/app/src/main/res/layout/fragment_timetable.xml
@@ -14,8 +14,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/timetableRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/datePickerFrameLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -33,7 +33,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
                 android:layout_marginStart="24dp"
-                android:layout_marginBottom="22dp"
+                android:layout_marginBottom="12dp"
+                android:layout_marginTop="12dp"
                 android:onClick="previousDayAction"
                 android:text="@string/navigate_before_text" />
 
@@ -42,8 +43,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                style="@style/lobsterStyle"
-                android:layout_marginBottom="28dp"
+                android:layout_marginBottom="14dp"
+                android:layout_marginTop="14dp"
                 android:text="@string/currentDateText" />
 
             <Button
@@ -51,7 +52,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:layout_marginBottom="22dp"
+                android:layout_marginBottom="12dp"
+                android:layout_marginTop="12dp"
                 android:layout_marginEnd="24dp"
                 android:onClick="nextDayAction"
                 android:text="@string/navigate_next_text" />
