--- a/app/src/main/res/layout/lesson_view.xml
+++ b/app/src/main/res/layout/lesson_view.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="0dp"
@@ -39,21 +38,22 @@
             android:id="@+id/teacherTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/teacherTV_placeholder" />
-
+            android:text="@string/teacherTV_placeholder"
+            android:layout_marginHorizontal="@dimen/fab_margin"
+            android:layout_marginTop="@dimen/fab_margin"/>
         <TextView
             android:id="@+id/locationTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/locationTV_placeholder" />
-
-
-
+            android:text="@string/locationTV_placeholder"
+            android:layout_marginHorizontal="@dimen/fab_margin"/>
         <TextView
             android:id="@+id/subjectTypeTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/subjectTypeTV_placeholder" />
+            android:text="@string/subjectTypeTV_placeholder"
+            android:layout_marginBottom="@dimen/fab_margin"
+            android:layout_marginHorizontal="@dimen/fab_margin"/>
     </LinearLayout>
 
 </LinearLayout>
