--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,5 @@
     <color name="gray_400">#FFBDBDBD</color>
     <color name="gray_600">#FF757575</color>
     <color name="selected_lesson_background">#426C97</color>
-    <color name="lesson_background">#F6F6F6</color>
+    <color name="lesson_background">#FFFFFF</color>
 </resources>
