--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,6 @@
     <color name="light_blue_600">#FF039BE5</color>
     <color name="gray_400">#FFBDBDBD</color>
     <color name="gray_600">#FF757575</color>
-    <color name="selected_lesson_background">#426C97</color>
+    <color name="selected_lesson_background">#E8F5E9</color>
     <color name="lesson_background">#FFFFFF</color>
 </resources>
