--- a/app/src/main/res/layout/fragment_professor_single.xml
+++ b/app/src/main/res/layout/fragment_professor_single.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable name="teacherinfopageVM" type="com.leenz.pnrpu.viewmodels.TeacherinfopageVM"/>
     </data>
-    <LinearLayout android:gravity="start" android:id="@+id/linearColumn"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:gravity="start"
+        android:id="@+id/linearColumn"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:orientation="vertical" style="@style/groupStylewhite_A700">
@@ -11,47 +15,45 @@
             android:id="@+id/linearColumnstatusbar"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
+            app:layout_constraintTop_toTopOf="parent"
             android:orientation="vertical" style="@style/groupStylewhite_A700">
-            <View android:background="@color/white_A700"
-                android:id="@+id/viewStatusbar"
-                android:layout_height="@dimen/_10pxv" android:layout_width="@dimen/_360pxh"/>
             <LinearLayout android:gravity="start"
                 android:id="@+id/linearColumnarrowleft"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:orientation="vertical" style="@style/groupStylewhite_A700">
-                <LinearLayout android:gravity="start"
+                <androidx.constraintlayout.widget.ConstraintLayout android:gravity="start"
                     android:id="@+id/linearRowarrowleft"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/_20pxh"
                     android:layout_marginStart="@dimen/_20pxh"
                     android:layout_marginTop="@dimen/_12pxv"
-                    android:layout_width="match_parent" android:orientation="horizontal">
+                    android:layout_width="match_parent"
+                    android:orientation="horizontal">
                     <ImageView android:id="@+id/imageArrowleft"
                         android:layout_height="@dimen/_15pxh"
-                        android:layout_marginBottom="@dimen/_12pxv"
-                        android:layout_marginTop="@dimen/_12pxv"
                         android:layout_width="@dimen/_15pxh"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         android:scaleType="fitXY"
                         android:src="@drawable/img_arrowleft_gray_901"
                         tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft_gray_901"/>
                     <androidx.appcompat.widget.AppCompatButton
-                        android:ellipsize="end" android:gravity="center"
+                        android:ellipsize="end"
                         android:id="@+id/btn191"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/_84pxh"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
                         android:letterSpacing="0.01"
                         android:lineSpacingExtra="@dimen/_1pxh"
-                        android:paddingBottom="@dimen/_13pxv"
-                        android:paddingEnd="@dimen/_24pxh"
-                        android:paddingStart="@dimen/_24pxh"
-                        android:paddingTop="@dimen/_13pxv"
                         android:singleLine="true"
                         android:text="@string/lbl_19_1"
-                        android:textAllCaps="false"
+                        android:textAllCaps="true"
                         style="@style/btnSolidRounded_1" tools:text="@string/lbl_19_1"/>
-                </LinearLayout>
+                </androidx.constraintlayout.widget.ConstraintLayout>
                 <TextView android:ellipsize="end"
                     android:id="@+id/teacherInfoPageLabelTV"
                     android:layout_height="wrap_content"
@@ -148,18 +150,12 @@
                         android:layout_weight="0.0" android:layout_width="0dp"/>
                     <TextView android:ellipsize="end"
                         android:id="@+id/teacherInfoPositionTV"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/_7pxv"
-                        android:layout_marginStart="@dimen/_33pxh"
-                        android:layout_marginTop="@dimen/_7pxv"
+                        android:layout_height="match_parent"
                         android:layout_weight="0.43"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
+                        android:gravity="center"
                         android:letterSpacing="0.01"
                         android:lineSpacingExtra="@dimen/_1pxh"
-                        android:paddingBottom="@dimen/_1pxv"
-                        android:paddingEnd="@dimen/_25pxh"
-                        android:paddingStart="@dimen/_25pxh"
-                        android:paddingTop="@dimen/_6pxv"
                         android:singleLine="true"
                         android:text="@{teacherinfopageVM.teacherinfopageModel.teacherPosition}"
                         style="@style/txtSolidRounded_1" tools:text="@string/lbl7"/>
@@ -181,7 +177,7 @@
                         android:letterSpacing="0.01"
                         android:lineSpacingExtra="@dimen/_1pxh"
                         android:singleLine="true"
-                        android:text="string/lbl12"
+                        android:text="@string/string_lbl12"
                         style="@style/txtRobotoromanbold14" tools:text="@string/lbl12"/>
                     <TextView android:id="@+id/teacherInfoDepartmentTV"
                         android:layout_height="wrap_content"
@@ -194,36 +190,24 @@
                         style="@style/txtRobotoromanregular14" tools:text="@string/msg6"/>
                 </LinearLayout>
             </LinearLayout>
-            <LinearLayout android:gravity="center_horizontal"
-                android:id="@+id/linearHome"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_80pxv"
-                android:layout_width="match_parent"
-                android:orientation="vertical" style="@style/groupStylegray_100">
-                <View
-                    android:background="@drawable/rectangle_bg_gray_908_radius_2"
-                    android:id="@+id/lineHome"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_height="@dimen/_4pxv"
-                    android:layout_marginBottom="@dimen/_8pxv"
-                    android:layout_marginEnd="@dimen/_144pxh"
-                    android:layout_marginStart="@dimen/_144pxh"
-                    android:layout_marginTop="@dimen/_8pxv" android:layout_width="@dimen/_72pxh"/>
-            </LinearLayout>
         </LinearLayout>
         <FrameLayout android:id="@+id/frameBottombar"
             android:layout_height="wrap_content"
-            android:layout_width="match_parent" style="@style/groupStylegray_100">
+            android:layout_width="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            style="@style/groupStylegray_100">
             <LinearLayout android:id="@+id/linearRowperson"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="@dimen/_16pxv"
                 android:layout_marginTop="@dimen/_12pxv"
-                android:layout_width="match_parent" android:orientation="horizontal">
+                android:layout_width="match_parent" android:orientation="horizontal"
+                android:baselineAligned="false">
                 <LinearLayout android:id="@+id/linearItem"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" android:layout_width="0dp" android:orientation="vertical">
                     <FrameLayout android:id="@+id/frameIcon"
                         android:layout_height="@dimen/_32pxv"
+                        android:layout_gravity="center"
                         android:layout_width="@dimen/_64pxh" style="@style/groupStyleblue_2">
                         <ImageView android:id="@+id/imagePerson"
                             android:layout_gravity="center"
@@ -303,5 +287,5 @@
                 </LinearLayout>
             </LinearLayout>
         </FrameLayout>
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
