--- a/app/src/main/res/drawable/top_professor_background.xml
+++ b/app/src/main/res/drawable/top_professor_background.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
-    <shape android:shape="rectangle">
-        <gradient android:startColor="#00A7DB" android:endColor="#162676" android:angle="270"></gradient>
+    <shape android:shape="rectangle" >
+        <solid android:color="#0377BE"></solid>
         <corners android:bottomRightRadius="30dp" android:bottomLeftRadius="30dp"></corners>
     </shape>
 </item>
