--- a/app/src/main/res/layout/professor_view.xml
+++ b/app/src/main/res/layout/professor_view.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:gravity="center"
     android:layout_height="wrap_content">
 
     <ImageView
@@ -11,28 +12,28 @@
         android:layout_height="90dp"
         android:layout_margin="5dp"
         tools:srcCompat="@tools:sample/avatars" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:orientation="vertical">
+
         <TextView
+            android:id="@+id/professorName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Name"
             android:textSize="20sp"
-            android:id="@+id/professorName"/>
+            android:textStyle="bold" />
+
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Department"
-            android:textSize="18sp"
-            android:id="@+id/professorDepartment"/>
-        <TextView
+            android:id="@+id/professorPosition"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Position"
-            android:textSize="18sp"
-            android:id="@+id/professorPosition"/>
+            android:textSize="18sp" />
 
     </LinearLayout>
+
 </LinearLayout>
