--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Timetable_test" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Timetable_test" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/PNRPU_primary</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
