--- a/app/src/main/res/layout/row_professorpage.xml
+++ b/app/src/main/res/layout/row_professorpage.xml
@@ -11,53 +11,64 @@
         android:layout_marginTop="@dimen/_5pxv"
         android:layout_width="match_parent"
         android:orientation="horizontal" style="@style/groupStylewhite_1">
-        <View
+        <ImageView
             android:background="@drawable/rectangle_bg_bluegray_100_radius_20"
-            android:id="@+id/viewEllipseOne"
+            android:id="@+id/professorImage"
             android:layout_height="@dimen/_40pxh"
             android:layout_marginBottom="@dimen/_19pxv"
             android:layout_marginStart="@dimen/_9pxh"
             android:layout_marginTop="@dimen/_19pxv" android:layout_width="@dimen/_40pxh"/>
-        <LinearLayout android:gravity="start"
+
+        <LinearLayout
             android:id="@+id/linearColumnfourteen"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_9pxv"
+            android:layout_width="0dp"
+            android:layout_gravity="center"
+            android:layout_height="match_parent"
             android:layout_marginStart="@dimen/_17pxh"
             android:layout_marginTop="@dimen/_8pxv"
+            android:layout_marginBottom="@dimen/_9pxv"
             android:layout_weight="0.83"
-            android:layout_width="0dp" android:orientation="vertical">
-            <TextView android:ellipsize="end"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
+
+            <TextView
                 android:id="@+id/professorNameTV"
+                style="@style/txtRobotoromanmedium15"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/_10pxh"
-                android:layout_width="match_parent"
+                android:ellipsize="end"
                 android:letterSpacing="0.01"
                 android:lineSpacingExtra="@dimen/_1pxh"
                 android:singleLine="true"
                 android:text="@{teacherpageModel.professorName}"
-                style="@style/txtRobotoromanmedium15" tools:text="@string/msg3"/>
-            <TextView android:ellipsize="end"
+                tools:text="@string/msg3" />
+
+            <TextView
                 android:id="@+id/professorPositionTV"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/_10pxh"
-                android:layout_marginTop="@dimen/_1pxv"
+                style="@style/txtRobotoromanregular12"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_1pxv"
+                android:layout_marginEnd="@dimen/_10pxh"
+                android:ellipsize="end"
                 android:letterSpacing="0.01"
                 android:lineSpacingExtra="@dimen/_1pxh"
                 android:singleLine="true"
                 android:text="@{teacherpageModel.professorPosition}"
-                style="@style/txtRobotoromanregular12" tools:text="@string/lbl7"/>
-            <TextView android:id="@+id/professorsDepartmentTV"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/_10pxh"
-                android:layout_marginTop="@dimen/_5pxv"
-                android:layout_width="match_parent"
-                android:letterSpacing="0.01"
-                android:lineSpacingExtra="@dimen/_2pxh"
-                android:text="@{teacherpageModel.professorsDepartment}"
-                style="@style/txtRobotoromanregular11" tools:text="@string/msg4"/>
+                tools:text="@string/lbl7" />
+            <!--            <TextView android:id="@+id/professorsDepartmentTV"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_marginEnd="@dimen/_10pxh"-->
+            <!--                android:layout_marginTop="@dimen/_5pxv"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:letterSpacing="0.01"-->
+            <!--                android:lineSpacingExtra="@dimen/_2pxh"-->
+            <!--                android:text="@{teacherpageModel.professorsDepartment}"-->
+            <!--                style="@style/txtRobotoromanregular11" tools:text="@string/msg4"/>-->
         </LinearLayout>
-        <ImageView android:id="@+id/imageArrowright"
+
+        <ImageView android:id="@+id/arr"
             android:layout_height="@dimen/_11pxh"
             android:layout_marginBottom="@dimen/_33pxv"
             android:layout_marginEnd="@dimen/_11pxh"
